# tickets_search

./: Cargo.toml  README.md  Rocket.toml
data/: data.json
src/: handlers.rs  main.rs  redis_con.rs  search.rs  tickets.rs
