[package]
name = "tickets_search"
version = "0.1.0"
authors = ["Anton Grechnev <f17antonio@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_codegen = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["max_level_debug", "std", "serde"] }
simple_logger = "1.0.1"
redis = "0.9"
r2d2 = "0.8"
r2d2_redis = "0.8"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]